[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memora-autogen"
version = "0.1.0"
description = "Poison-resistant, Byzantine-fault-tolerant shared memory for Microsoft AutoGen agent teams — implements the autogen_core Memory protocol; one rogue agent can't corrupt the team's recall."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "mgillr" }]
readme = "README.md"
keywords = ["autogen", "ai-agents", "multi-agent", "memory", "crdt", "byzantine", "shared-memory", "agent-security", "microsoft-autogen"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "memora-swarm>=0.1.0",
  "autogen-core>=0.4",
]

[project.urls]
Homepage = "https://memora.optitransfer.ch"
Documentation = "https://memora.optitransfer.ch/docs"
Repository = "https://github.com/mgillr/memora-swarm"

[tool.hatch.build.targets.wheel]
packages = ["memora_autogen"]
