[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memora-langchain"
version = "0.1.0"
description = "Poison-resistant, Byzantine-fault-tolerant shared chat memory for LangChain agent swarms — one prompt-injected agent can't corrupt the shared history."
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "mgillr" }]
readme = "README.md"
keywords = ["langchain", "ai-agents", "multi-agent", "memory", "chat-history", "crdt", "byzantine", "shared-memory", "agent-security"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "memora-swarm>=0.1.0",
  "langchain-core>=0.3,<0.4",
]

[project.urls]
Homepage = "https://memora.optitransfer.ch"
Documentation = "https://memora.optitransfer.ch/docs"
Repository = "https://github.com/mgillr/memora-swarm"

[tool.hatch.build.targets.wheel]
packages = ["memora_langchain"]
